--- a/TGenWebApp/wwwroot/css/styles.css
+++ b/TGenWebApp/wwwroot/css/styles.css
@@ -55,7 +55,7 @@ nav ul {
     padding-top: 0.4rem;
 }
 
-nav ul li {
+nav ul li a {
     list-style-type: none;
     margin: 0.5rem 0;
     display: inline-flex;
@@ -74,7 +74,7 @@ nav a:hover {
     color: var(--accent-primary);
 }
 
-.active {
+a.active {
     margin: 0 0.5rem !important;
     padding: 0.5rem 0.1rem !important;
     transition-timing-function: ease;
@@ -83,7 +83,7 @@ nav a:hover {
     border-bottom: 2px solid var(--accent-primary) !important;
 }
 
-.active:hover {
+a.active:hover {
     margin-left: 0 !important;
     margin-right: 0 !important;
     padding-left: 0.6rem !important; 
